# TeleTron

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
examples/hunyuanvideo/: pipelines.py  pretrain_hunyuanvideo.py  run_unified.sh  run_unified_dist.sh  run_unified_sanity_check.sh  video_generation.py  video_generation.sh
examples/wan/: pretrain_wan.py  run_wan.sh
teletron/: __init__.py  megatron_adaptor.py
teletron/convert_ckpt/hunyuan/: convert_ckpt.md  convert_hf2tel.sh  convert_hunyuanvideo.py  convert_tel2hf.sh
teletron/core/: data_loader.py  parallel_state.py  training.py
teletron/core/context_parallel/: __init__.py  context_parallel_mixin.py  context_parallel_model.py  layers.py  mappings.py  pad.py
teletron/core/distributed/: __init__.py  base_encoder.py  distributed_data_parallel.py  distributed_encoder.py  param_and_grad_buffer.py
teletron/core/tensor_parallel/: mappings.py
teletron/core/transformer/: __init__.py  transformer_block.py
teletron/datasets/: build.py  fake_dataset.py  koala.yml  koala_dataset.py  registry.py
teletron/models/: build.py  encoder_registry.py  registry.py
teletron/train/: __init__.py  arguments.py  checkpoint.py  config.py  consumer_dataloader.py  dataloader.py  lr_scheduler.py  telelogger.py  trainer.py  utils.py
teletron/training/: training.py  utils.py
teletron/utils/: __init__.py  aux_func.py  checkpoint.py  config.py  microbatches.py  prompt.py  read_video.py  tokenizer.py  video_utils.py
teletron_op/: README.md  install.sh
teletron_op/fused_adaln/: adaln_backward.cu  adaln_forward.cu  adaln_ops.cpp  adaln_setup.py  install.sh  scale_shift_backward.cu
teletron_op/fused_rmsnorm/: install.sh  rms_backward.cu  rms_forward.cu  rms_ops.cpp  rms_setup.py  weight_backward.cu
test/: readme.md  setup.py
test/test_scripts/: run_test_cases.sh
tests/: conftest.py  setup.py
tests/common/: compare_checkpoint_distance.py
tests/unit_tests/: test_utils.py
(+45 files in other folders)
